@@ -1,3 +1,9 @@
+Sun Feb 22 22:08:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (stack_extend): streamlined rb_thread_restore_context()
+	  to ensure O(1) time.  based on a patch by Brent Roman <brent AT
+	  mbari.org>.
+
 Sun Feb 22 22:03:40 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (cc_mark): frees the continuation's stack if its thread
